--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/bazar
+spring.datasource.url = jdbc:mysql://localhost:3306/orderitem
 spring.datasource.username = root
 spring.datasource.password = password
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-server.port=9191
+server.port=9192
