paginated response config server

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 server.port=9192
+spring.cloud.config.uri: http://localhost:8888
+spring.application.name=OrderService
+spring.config.import=optional:configserver:http://localhost:8888/
+management.endpoints.web.exposure.include=*
