--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.cloud.config.uri: http://localhost:8888
 spring.application.name=OrderService
 spring.config.import=optional:configserver:http://localhost:8888/
 management.endpoints.web.exposure.include=*
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
