--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,24 @@
 			<artifactId>mockito-core</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>net.devh</groupId>
+			<artifactId>grpc-client-spring-boot-starter</artifactId>
+			<version>2.13.1.RELEASE</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.unsa.etf</groupId>
+			<artifactId>SystemEventsService</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>30.1-jre</version>
+		</dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
@@ -92,6 +110,14 @@
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dependencies</artifactId>
 				<version>2021.0.1</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+
+			<dependency>
+				<groupId>io.grpc</groupId>
+				<artifactId>grpc-bom</artifactId>
+				<version>1.37.0</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
