--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,7 @@ spring.application.name=OrderService
 spring.config.import=optional:configserver:http://localhost:8888/
 management.endpoints.web.exposure.include=*
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+grpc.client.SystemEventsService.address: static://localhost:9999
+grpc.client.SystemEventsService.negotiationType: plaintext
+spring.main.allow-bean-definition-overriding=true
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
