Added neccessarry stuff for 2-way communication with Inventory service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.application.name=OrderService
 spring.config.import=optional:configserver:http://localhost:8888/
 management.endpoints.web.exposure.include=*
 
+grpc.server.port=9998
 grpc.client.SystemEventsService.address: static://localhost:9999
 grpc.client.SystemEventsService.negotiationType: plaintext
 spring.main.allow-bean-definition-overriding=true
