--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,12 @@
 			<version>30.1-jre</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+			<version>2.2.2.RELEASE</version>
+		</dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
